--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -1,19 +1,19 @@
 .home_container {
     display: flex;
     flex-direction: column;
+    align-items: center; /* Center content horizontally */
     width: 100%;
     margin-top: 30px;
     margin-bottom: 15px;
-    justify-self: center;
+    text-align: center; /* Center text within container */
 }
 
 .home_container h1 {
     color: #319421;
-    
+    margin-top: 10px; /* Add space between h1 and p */
 }
 
 .home_container p {
-    margin-top: 10px;
     color: #319421;
-    margin-bottom: 30px;
+    margin-bottom: 30px; /* Add space after p */
 }
